--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -45,14 +45,14 @@
           <a href="#" class="btn">Télécharger mon CV</a>
       </div>
       <div class="home-img">
-        <img src="images/home1.png" alt="" class="">
+        <img src="home1.png" alt="" class="">
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="images/about.png" alt="">
+        <img src="about.png" alt="">
       </div>
       <div class="about-content">
         <h2 class="heading"> À-propos de <span>Moi</span></h2>
@@ -121,7 +121,7 @@
       <h2 class="heading">Derniers <span>Projets</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
-          <img src="images/portfolio1.jpg" alt="">
+          <img src="portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -130,7 +130,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio2.jpg" alt="">
+          <img src="portfolio2.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio3.jpg" alt="">
+          <img src="portfolio3.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio4.jpg" alt="">
+          <img src="portfolio4.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio5.jpg" alt="">
+          <img src="portfolio5.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -166,7 +166,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="images/portfolio6.jpg" alt="">
+          <img src="portfolio6.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
@@ -216,6 +216,6 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
