--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar">
         <a href="#home" class="active">Acceuil</a>
         <a href="#about">À-propos</a>
-        <a href="#services">Skills</a>
+        <a href="#skills">Skills</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </nav>  
