--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <!-- contact section design -->
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Moi</span></h2>
+      <h2 class="heading">Contactez<span>Moi</span></h2>
       <form id="my-form" action="https://formspree.io/f/moqgyekv" method="POST">
         <div class="input-box">
             <input type="text" name="nom" placeholder="Nom Complet" required>
