Mise a jour blanked

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="portfolio-layer">
             <h4>Design Ui/UX</h4>
             <p>Application mobile de commerce électronique (Marketplace) développée avec Flutter, offrant une expérience utilisateur immersive et intuitive.</p>
-            <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design"><i class='bx bx-link-external' ></i></a>
+            <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
 
@@ -131,7 +131,7 @@
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>Refonte du site de la DGS réalisée lors du Stackhackton organisé au sein de la SING, mettant en œuvre les dernières technologies pour offrir une expérience utilisateur améliorée.</p>
-            <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design"><i class='bx bx-link-external' ></i></a>
+            <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
 
