Mise a jour portfolio4

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
           <img src="portfolio4.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
-            <a href="#"><i class='bx bx-link-external' ></i></a>
+            <p>Découvrez EKENDO, un site que j'ai conçu pour promouvoir des excursions en mer avec un design élégant et une expérience utilisateur intuitive.</p>
+            <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/Ile-Mbani%C3%A9?page-id=0%3A1&node-id=3-2&viewport=1029%2C513%2C0.13&t=YxSejo7jGnl75V3r-1&scaling=min-zoom&content-scaling=fixed " target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
 
