--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <img src="portfolio1.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Design Ui/UX</h4>
-            <p>Application mobile de commerce électronique (Marketplace) développée avec Flutter, offrant une expérience utilisateur immersive et intuitive.</p>
+            <p>Application mobile de commerce électronique (Marketplace) développée avec Flutter.</p>
             <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
@@ -130,7 +130,7 @@
           <img src="portfolio2.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Refonte du site de la DGS réalisée lors du Stackhackton organisé au sein de la SING, mettant en œuvre les dernières technologies pour offrir une expérience utilisateur améliorée.</p>
+            <p>Refonte du site de la DGS réalisée lors du Stackhackton organisé au sein de la SING.</p>
             <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
@@ -139,7 +139,7 @@
           <img src="portfolio3.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Site web de la société Hiram Communication conçu pour répondre aux besoins spécifiques de l'entreprise, offrant une interface conviviale.</p>
+            <p>Site web de la société Hiram Communication conçu pour répondre aux besoins spécifiques de l'entreprise.</p>
             <a href="#"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
@@ -148,17 +148,17 @@
           <img src="portfolio4.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Découvrez EKENDO, un site que j'ai conçu pour promouvoir des excursions en mer avec un design élégant et une expérience utilisateur intuitive.</p>
-            <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/Ile-Mbani%C3%A9?page-id=0%3A1&node-id=3-2&viewport=1029%2C513%2C0.13&t=YxSejo7jGnl75V3r-1&scaling=min-zoom&content-scaling=fixed " target="_blank"><i class='bx bx-link-external' ></i></a>
+            <p>Découvrez EKENDO, un site que j'ai conçu pour promouvoir des excursions en mer.</p>
+            <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/EKENDO?page-id=0%3A1&node-id=3-2&p=f&viewport=530%2C395%2C0.05&t=0Q0w2Ht1TF8C3f4B-1&scaling=scale-down&content-scaling=fixed" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="portfolio5.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
-            <a href="#"><i class='bx bx-link-external' ></i></a>
+            <h4>Site Web</h4>
+            <p>Réalisation d'un site web pour le Samu Social Gabonais, une organisation humanitaire qui lutte contre l'exclusion sociale.</p>
+            <a href="https://www.samusocialgabonais.com/" target="_blank"><i class='bx bx-link-external' ></i></a>
           </div>
         </div>
 
@@ -166,8 +166,9 @@
           <img src="portfolio6.jpg" alt="">
           <div class="portfolio-layer">
             <h4>Web Design</h4>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, modi.</p>
-            <a href="#"><i class='bx bx-link-external' ></i></a>
+            <p>Création d’un prototype de site web pour BGFI Bourse.</p>
+            <a href="https://www.figma.com/proto/XIK0sukVl8I24rx2NMhhpx/BICIG-Bourse?page-id=0%3A1&node-id=280-1800&viewport=592%2C102%2C0.08&t=h1cWVOQKfanYmQZr-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=280%3A1800" target="_blank"><i class='bx bx-link-external' ></i></a>
+
           </div>
         </div>
 
