mise a jour des liens et disposition des project

--- a/index.html
+++ b/index.html
@@ -360,123 +360,120 @@
         </div>
 
         <div class="portfolio-grid">
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio1.jpg"
-                alt="Plateforme E-commerce Moderne"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Design Ui/UX</h4>
-              <p class="portfolio-description">
-                 Application mobile de commerce électronique (Marketplace)
-              développée avec Flutter.
-              </p>
-              <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio2.jpg"
-                alt="Application SaaS Dashboard"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Web Design</h4>
-              <p class="portfolio-description">
-                 Refonte du site de la DGS réalisée lors du Stackhackton organisé
-              au sein de la SING.
-              </p>
-              <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
+  <a href="https://samsusocial-sc1rm.kinsta.page" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio5.jpg" alt="Application Mobile Fitness" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Refonte visuelle</h4>
+      <p class="portfolio-description">
+        Réalisation complète d’un site web moderne et responsive pour le Samu Social Gabonais, une organisation humanitaire engagée dans la lutte contre l’exclusion sociale. 
+        Ce projet a consisté à concevoir une plateforme claire et accessible permettant de présenter leurs missions, actions sur le terrain et campagnes de sensibilisation, avec une mise en avant des actualités et des possibilités de dons en ligne.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio3.jpg"
-                alt="Site Web Agence Créative"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Site Web Agence Créative</h4>
-              <p class="portfolio-description">
-                Site web de la société Hiram Communication conçu pour répondre aux
-              besoins spécifiques de l'entreprise.
-              </p>
-              <a href="https://www.figma.com/proto/oySmC346WgGzyTgJcvAc0G/Site-Hiram-Prototype?page-id=0%3A1&node-id=0-6&p=f&viewport=279%2C305%2C0.04&t=971qpcVSoMWH46zS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=0%3A6" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio4.jpg"
-                alt="Application Mobile Fitness"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Web Design</h4>
-              <p class="portfolio-description">
-                 Découvrez EKENDO, un site que j'ai conçu pour promouvoir des
-              excursions en mer.
-              </p>
-              <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/EKENDO?page-id=0%3A1&node-id=3-2&p=f&viewport=530%2C395%2C0.05&t=0Q0w2Ht1TF8C3f4B-1&scaling=scale-down&content-scaling=fixed" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
+  <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio2.jpg" alt="Application SaaS Dashboard" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Web Design</h4>
+      <p class="portfolio-description">
+        Refonte complète du site web de la Direction Générale de la Statistique (DGS) dans le cadre du Stackhackton organisé par la SING. 
+        L’objectif principal était de moderniser l’image de l’institution et de faciliter l’accès aux données statistiques grâce à une interface épurée, dynamique et responsive. 
+        Le design intègre également des éléments interactifs pour la consultation rapide des rapports et publications.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio5.jpg"
-                alt="Application Mobile Fitness"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Site Web</h4>
-              <p class="portfolio-description">
-                Réalisation d'un site web pour le Samu Social Gabonais, une
-              organisation humanitaire qui lutte contre l'exclusion sociale.
-              </p>
-              <a href="https://www.figma.com/proto/ACoNp0YjxDI231ai5U9g2n/SAMU?page-id=0%3A1&node-id=28-1805&p=f&viewport=295%2C153%2C0.04&t=UAm0g642l25u0L5M-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=28%3A1805" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
+   <a href="https://www.figma.com/proto/XIK0sukVl8I24rx2NMhhpx/BICIG-Bourse?page-id=0%3A1&node-id=280-1800&viewport=592%2C102%2C0.08&t=h1cWVOQKfanYmQZr-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=280%3A1800" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio6.jpg" alt="Application Mobile Fitness" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Web Design</h4>
+      <p class="portfolio-description">
+        Prototype de site web conçu pour BGFI Bourse, une filiale du groupe bancaire BGFI, dans le but de présenter leurs offres et services d’investissement. 
+        L’interface a été pensée pour inspirer confiance, tout en facilitant la lecture des données financières et la navigation entre les différentes sections du site. 
+        Un travail particulier a été porté sur la typographie et la hiérarchie visuelle.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio6.jpg"
-                alt="Application Mobile Fitness"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Web Design</h4>
-              <p class="portfolio-description">
-               Création d’un prototype de site web pour BGFI Bourse.
-              </p>
-              <a href="https://www.figma.com/proto/XIK0sukVl8I24rx2NMhhpx/BICIG-Bourse?page-id=0%3A1&node-id=280-1800&viewport=592%2C102%2C0.08&t=h1cWVOQKfanYmQZr-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=280%3A1800" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
 
-          <div class="portfolio-item">
-            <div class="portfolio-image">
-              <img
-                src="portfolio7.png"
-                alt="Application Mobile Fitness"
-              />
-            </div>
-            <div class="portfolio-content">
-              <h4 class="portfolio-title">Web Design</h4>
-              <p class="portfolio-description">
-                Création d’un prototype de site web pour Le Boucher
-              </p>
-              <a href="https://www.figma.com/proto/htnJh2ncTYyeee2ANCYFqn/Le-Boucher?page-id=0%3A1&node-id=1-1795&p=f&viewport=612%2C173%2C0.03&t=rYo4a87QEJDOxych-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A1795" class="portfolio-link">Voir le Projet →</a>
-            </div>
-          </div>
-        </div>
+  <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio1.jpg" alt="Plateforme E-commerce Moderne" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Design Ui/UX</h4>
+      <p class="portfolio-description">
+        Conception d’une application mobile e-commerce intuitive et fluide, pensée pour simplifier le parcours d’achat des utilisateurs. 
+        Ce prototype met l’accent sur l’expérience utilisateur avec une interface minimaliste, une navigation claire, et une gestion optimisée du panier et des paiements. 
+        Réalisé sous Figma, il illustre un modèle de marketplace moderne inspiré des meilleures pratiques du commerce digital.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+
+
+   <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/EKENDO?page-id=0%3A1&node-id=3-2&p=f&viewport=530%2C395%2C0.05&t=0Q0w2Ht1TF8C3f4B-1&scaling=scale-down&content-scaling=fixed" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio4.jpg" alt="Application Mobile Fitness" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Web Design</h4>
+      <p class="portfolio-description">
+        Conception du site EKENDO, une plateforme dédiée à la découverte et à la réservation d’excursions en mer au Gabon. 
+        Le design se veut immersif et évocateur, avec une mise en avant des images et une interface utilisateur fluide. 
+        Le projet a permis de renforcer la visibilité d’une entreprise locale tout en facilitant la réservation d’activités touristiques.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+  
+
+  <a href="https://www.figma.com/proto/oySmC346WgGzyTgJcvAc0G/Site-Hiram-Prototype?page-id=0%3A1&node-id=0-6&p=f&viewport=279%2C305%2C0.04&t=971qpcVSoMWH46zS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=0%3A6" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio3.jpg" alt="Site Web Agence Créative" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Site Web Agence Créative</h4>
+      <p class="portfolio-description">
+        Conception d’un site vitrine pour l’agence Hiram Communication, spécialisée dans la stratégie digitale et la production visuelle. 
+        Le projet met en avant une présentation élégante des services, des réalisations et de l’équipe, avec un design harmonieux et des animations fluides. 
+        L’objectif était de créer une interface professionnelle et inspirante reflétant l’univers créatif de l’agence.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+
+ 
+
+ 
+  <a href="https://www.figma.com/proto/htnJh2ncTYyeee2ANCYFqn/Le-Boucher?page-id=0%3A1&node-id=1-1795&p=f&viewport=612%2C173%2C0.03&t=rYo4a87QEJDOxych-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A1795" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio7.png" alt="Application Mobile Fitness" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Web Design</h4>
+      <p class="portfolio-description">
+        Réalisation d’un prototype de site vitrine pour l’entreprise Le Boucher, spécialisé dans la vente de viande de qualité. 
+        Le projet visait à créer une image haut de gamme avec un design sobre, élégant et moderne. 
+        La navigation met en valeur les produits, les offres promotionnelles et la philosophie artisanale de la marque à travers une expérience utilisateur fluide et engageante.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+
+</div>
+
       </div>
     </div>
 
