ajout du site propolis

--- a/index.html
+++ b/index.html
@@ -406,6 +406,21 @@
     </div>
   </a>
 
+  <a href="https://propolisholding-os62h.kinsta.page" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio8.png" alt="Site Web Propolis Holding" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Site Web Holding Propolis</h4>
+      <p class="portfolio-description">
+        Conception d'un site vitrine pour Propolis Holding, une société d'investissement panafricaine spécialisée dans l'immobilier durable et l'agrobusiness. 
+        Le projet présente l'identité de la holding, ses filiales, son engagement RSE et son équipe à travers un design élégant aux couleurs or et bleu nuit. 
+        L'interface met en avant la vision d'une Afrique prospère avec des animations fluides et une expérience utilisateur soignée, reflétant l'esprit de la ruche au service du continent.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+
 
   <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
@@ -437,7 +452,6 @@
       <span class="portfolio-link">Voir le Projet →</span>
     </div>
   </a>
-  
 
   <a href="https://www.figma.com/proto/oySmC346WgGzyTgJcvAc0G/Site-Hiram-Prototype?page-id=0%3A1&node-id=0-6&p=f&viewport=279%2C305%2C0.04&t=971qpcVSoMWH46zS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=0%3A6" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
@@ -517,8 +531,8 @@
           <h4>Contact</h4>
           <ul>
             <li>
-              <a href="mailto:contact@frederic-essone.com"
-                >contact@frederic-essone.com</a
+              <a href="mailto:snapdofus44@gmail.com"
+                >snapdofus44@gmail.com</a
               >
             </li>
             <li><a href="tel:+33123456789">Disponible</a></li>
