mise a jour de la section mobile

--- a/index.html
+++ b/index.html
@@ -422,16 +422,16 @@
   </a>
 
 
-  <a href="https://www.figma.com/proto/JQwelCeUUKIJnfY5qvD4RT/Distributeur2.0?page-id=0%3A1&type=design&node-id=5-59&viewport=509%2C612%2C0.1&t=3HRhGERDiOKzceK0-1&scaling=scale-down&starting-point-node-id=171%3A174&mode=design" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+  <a href="https://appho.st/d/dgQwZq8N" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
       <img src="portfolio1.jpg" alt="Plateforme E-commerce Moderne" />
     </div>
     <div class="portfolio-content">
       <h4 class="portfolio-title">Design Ui/UX</h4>
       <p class="portfolio-description">
-        Conception d’une application mobile e-commerce intuitive et fluide, pensée pour simplifier le parcours d’achat des utilisateurs. 
-        Ce prototype met l’accent sur l’expérience utilisateur avec une interface minimaliste, une navigation claire, et une gestion optimisée du panier et des paiements. 
-        Réalisé sous Figma, il illustre un modèle de marketplace moderne inspiré des meilleures pratiques du commerce digital.
+       Conception d’une application mobile de livraison de colis, intuitive et performante, pensée pour simplifier la gestion des commandes et des livraisons.
+       Cette application met l’accent sur l’expérience utilisateur avec une interface claire, une navigation fluide et des fonctionnalités pratiques : suivi des colis en temps réel, gestion des livraisons, notifications automatiques et administration optimisée.
+       Développée avec Flutter et prête pour la publication sur Appho.st, elle illustre un modèle moderne d’application logistique efficace et opérationnelle.
       </p>
       <span class="portfolio-link">Voir le Projet →</span>
     </div>
