correction du bugs contacter nous mobile

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 </defs>
                 <text>
                   <textPath href="#circle">
-                    100% PROJETS RÉCENTS • 100% PROJETS RÉCENTS •
+                    100% DEVELOPPEUR WEB / FLUTTER & DART •
                   </textPath>
                 </text>
               </svg>
