correction du bugs contacter nous mobile et ajoute du message de preconfig

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h3>Me contacter sur WhatsApp</h3>
         <p>Clique sur le bouton ci-dessous pour démarrer la conversation :</p>
         <a
-          href="https://wa.me/241074219524"
+          href="https://wa.me/241074219524?text=Bonjour%20Frédéric,%20je%20vous%20contacte%20via%20votre%20portfolio.%20J'aimerais%20discuter%20d'un%20projet%20avec%20vous."
           target="_blank"
           class="whatsapp-link"
         >
