mise a jour du porfolio

--- a/index.html
+++ b/index.html
@@ -503,13 +503,29 @@
     </div>
   </a>
 
+   <a href="https://luxicar-rny58.kinsta.page/" class="portfolio-item" style="text-decoration: none; color: inherit;">
+    <div class="portfolio-image">
+      <img src="portfolio10.jpg" alt="Application Mobile Luxicar" />
+    </div>
+    <div class="portfolio-content">
+      <h4 class="portfolio-title">Application Mobile - Luxicar</h4>
+      <p class="portfolio-description">
+        Application mobile complète pour la location et la vente de véhicules de luxe. 
+        Luxicar offre une expérience utilisateur fluide avec un catalogue interactif, un système de réservation en temps réel, 
+        des options de paiement sécurisées et une gestion intuitive des contrats de location. 
+        L'application intègre également un système de notifications, un suivi des véhicules disponibles et une interface d'administration pour gérer l'inventaire et les transactions.
+      </p>
+      <span class="portfolio-link">Voir le Projet →</span>
+    </div>
+  </a>
+
 
   <a href="https://appho.st/d/dgQwZq8N" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
       <img src="portfolio1.jpg" alt="Plateforme E-commerce Moderne" />
     </div>
     <div class="portfolio-content">
-      <h4 class="portfolio-title">Design Ui/UX</h4>
+      <h4 class="portfolio-title">Application mobile - Fast Delevery</h4>
       <p class="portfolio-description">
        Conception d’une application mobile de livraison de colis, intuitive et performante, pensée pour simplifier la gestion des commandes et des livraisons.
        Cette application met l’accent sur l’expérience utilisateur avec une interface claire, une navigation fluide et des fonctionnalités pratiques : suivi des colis en temps réel, gestion des livraisons, notifications automatiques et administration optimisée.
@@ -524,7 +540,7 @@
       <img src="portfolio9.jpg" alt="#" />
     </div>
     <div class="portfolio-content">
-      <h4 class="portfolio-title">Application mobile</h4>
+      <h4 class="portfolio-title">Application mobile - Fastgood</h4>
       <p class="portfolio-description">
         Conception d’une application mobile de livraison de fast-food gabonais : simple, rapide et locale. Commande en quelques tapotements,
          suivi en temps réel, paiement Mobile Money (Airtel Money) et notifications automatiques. Développée avec Flutter et 
@@ -533,6 +549,9 @@
       <span class="portfolio-link">Voir le Projet →</span>
     </div>
   </a>
+
+ 
+
 
 
    <a href="https://www.figma.com/proto/tYn7zLsOVeCGnVZrYy9bDj/EKENDO?page-id=0%3A1&node-id=3-2&p=f&viewport=530%2C395%2C0.05&t=0Q0w2Ht1TF8C3f4B-1&scaling=scale-down&content-scaling=fixed" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
@@ -550,6 +569,7 @@
     </div>
   </a>
 
+  
   <a href="https://www.figma.com/proto/oySmC346WgGzyTgJcvAc0G/Site-Hiram-Prototype?page-id=0%3A1&node-id=0-6&p=f&viewport=279%2C305%2C0.04&t=971qpcVSoMWH46zS-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=0%3A6" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
       <img src="portfolio3.jpg" alt="Site Web Agence Créative" />
