--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             </div>
             <div class="profile-image">
               <img
-                src="IMG_0649_thumb.JPG  "
+                src="photo2.png"
                 alt="Frédéric KOKOU ESSONE"
               />
             </div>
