--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     </div>
   </a>
 
-   <a href="fastgood-e0dll.kinsta.page" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+   <a href="https://fastgood-e0dll.kinsta.page/" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
       <img src="portfolio9.jpg" alt="#" />
     </div>
