mise a jour des textes de fastgood

--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@
       <h4 class="portfolio-title">Application mobile - Fastgood</h4>
       <p class="portfolio-description">
         Conception d’une application mobile de livraison de fast-food gabonais : simple, rapide et locale. Commande en quelques tapotements,
-         suivi en temps réel, paiement Mobile Money (Airtel Money) et notifications automatiques. Développée avec Flutter et 
-         prête pour publication sur Appho.st — l’expérience idéale pour savourer les spécialités gabonaises à domicile.
+         suivi en temps réel, paiement Mobile Money (Airtel Money) et notifications automatiques. Développée avec Flutter en utilisant une approche neumorphism pour le design et 
+         prête pour publication  — l’expérience idéale pour savourer les spécialités gabonaises à domicile.
        </p>
       <span class="portfolio-link">Voir le Projet →</span>
     </div>
