mise a jour du loader desktop et mobile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!-- Loader Vidéo -->
        <div id="loader" class="loader">
         <video id="loadingVideo" class="loading-video" muted playsinline>
-            <source src="loading.mp4" type="video/mp4">
+            <!-- La source est définie dynamiquement via JavaScript selon la taille d'écran -->
         </video>
     </div>
 
