mise a jour du loader desktop et mobile et bouton conctat

--- a/index.html
+++ b/index.html
@@ -613,5 +613,7 @@
     </footer>
 
     <script src="script-modern.js" defer></script>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.12.52/build/spline-viewer.js"></script>
+<spline-viewer url="https://prod.spline.design/OHctONxLLzf3DOfz/scene.splinecode"></spline-viewer>
   </body>
 </html>
