Mise a jour du portfolio

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               Fullstack
             </span>
 
-            <span class="title-line lara">Laravel/flutter
+            <span class="title-line lara">Laravel/flutter <br>React
                 <a
                 href="CV_Frederic_KOKOU ESSONE.pdf"
                 target="_blank"
@@ -164,7 +164,10 @@
           <p class="hero-description">
             Ingénieur informatique réseau & télécom,<br />
             Développeur Web & Mobile passionné,<br />
-            Spécialisé en Flutter, Laravel et UI/UX Design.
+            Spécialisé en Flutter, Laravel ,React et UI/UX Design.
+            Capable de concevoir des applications performantes, maintenables 
+            et optimisées pour le web et le mobile.
+            
           </p>
         </div>
 
@@ -395,7 +398,7 @@
     </div>
   </a>
 
-
+ 
   <a href="https://www.figma.com/proto/f8zvOU4b0z9rq2K9I8KrjL/Site-web-de-la-DGS?page-id=0%3A1&type=design&node-id=166-4564&viewport=-100%2C731%2C0.05&t=aIfjpvrmmmvhnfiV-1&scaling=scale-down-width&starting-point-node-id=166%3A4564&mode=design" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
       <img src="portfolio2.jpg" alt="Application SaaS Dashboard" />
@@ -425,6 +428,36 @@
       <span class="portfolio-link">Voir le Projet →</span>
     </div>
   </a>
+
+   <!-- Projet GSAP Chez Dylan -->
+<a href="https://gsap-chez-dylan.vercel.app/" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+  <div class="portfolio-image">
+    <img src="portfolio9.png" alt="Projet Animations GSAP" />
+  </div>
+  <div class="portfolio-content">
+    <h4 class="portfolio-title">Site Web Chez Dylan</h4>
+    <p class="portfolio-description">
+      Projet expérimental utilisant <strong>React + Vite</strong> et <strong>GSAP</strong> pour créer des animations fluides et immersives. 
+      L'objectif était de transformer une simple page web en une expérience interactive et dynamique, mettant en avant transitions et effets visuels modernes.
+    </p>
+    <span class="portfolio-link">Voir le Projet →</span>
+  </div>
+</a>
+
+<!-- Projet Melt & Co Delta -->
+<a href="https://meltco-delta.vercel.app/" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
+  <div class="portfolio-image">
+    <img src="portfolio10.png" alt="Projet Melt & Co Delta" />
+  </div>
+  <div class="portfolio-content">
+    <h4 class="portfolio-title">Site Web Melt & Co Delta</h4>
+    <p class="portfolio-description">
+      Conception d'un site vitrine pour Melt & Co Delta, mettant en avant leur identité visuelle et leurs services. 
+      Le projet utilise <strong>React + Vite</strong> avec des animations GSAP pour offrir une expérience utilisateur moderne, fluide et interactive.
+    </p>
+    <span class="portfolio-link">Voir le Projet →</span>
+  </div>
+</a>
 
   <a href="https://propolisholding-os62h.kinsta.page" target="_blank" class="portfolio-item" style="text-decoration: none; color: inherit;">
     <div class="portfolio-image">
